--- a/zensical.toml
+++ b/zensical.toml
@@ -4,6 +4,15 @@ site_description = "空白棱的CS学习笔记"
 site_author = "空白棱"
 site_url = "https://cyhkbl.github.io/CS-learning/"
 copyright = "&copy; 空白棱"
+nav = [
+    {"环境" = [
+        { "环境配置" = "环境/环境配置.md" }
+    ]},
+    {"Python" = [
+        { "函数" = "Python/函数.md" },
+        { "调试" = "Python/调试.md" }
+    ]}
+]
 
 [project.theme]
 language = "zh"
