feat: 添加新的文档导航项，包括基础、网络配置和安全相关内容

--- a/zensical.toml
+++ b/zensical.toml
@@ -11,10 +11,13 @@ nav = [
         { "包管理" = "环境/包管理.md" }
     ]},
     {"Latex" = [
+        { "基础" = "Latex/基础.md" },
         { "图片" = "Latex/图片.md" },
         { "引用" = "Latex/引用.md" }
     ]},
     {"Git" = [
+        { "基础" = "Git/基础.md" },
+        { "网络配置" = "Git/网络配置.md" },
         { "gitignore" = "Git/gitignore.md" }
     ]},
     {"Python" = [
@@ -22,7 +25,17 @@ nav = [
         { "调试" = "Python/调试.md" },
         { "杂项" = "Python/杂项.md" }
     ]},
+    {"网络" = [
+        { "网络基础" = "网络/网络基础.md" },
+        { "网络连接" = "网络/网络连接.md" },
+        { "代理" = "网络/代理.md" },
+        { "VPN" = "网络/VPN.md" }
+    ]},
+    {"安全" = [
+        { "设备识别与认证" = "安全/设备识别与认证.md" }
+    ]},
     {"云" = [
+        { "SSH" = "云/SSH.md" },
         { "Azure" = "云/Azure.md" }
     ]}
 ]
