--- a/zensical.toml
+++ b/zensical.toml
@@ -10,6 +10,9 @@ nav = [
         { "环境配置" = "环境/环境配置.md" },
         { "包管理" = "环境/包管理.md" }
     ]},
+    {"BME" = [
+        { "生物医学信号处理" = "BME/生物医学信号处理.md" }
+    ]}
     {"Latex" = [
         { "基础" = "Latex/基础.md" },
         { "图片" = "Latex/图片.md" },
