feat: 更新文档，添加无线电和数字音频相关内容

--- a/zensical.toml
+++ b/zensical.toml
@@ -10,9 +10,6 @@ nav = [
         { "环境配置" = "环境/环境配置.md" },
         { "包管理" = "环境/包管理.md" }
     ]},
-    {"BME" = [
-        { "生物医学信号处理" = "BME/生物医学信号处理.md" }
-    ]},
     {"Latex" = [
         { "基础" = "Latex/基础.md" },
         { "图片" = "Latex/图片.md" },
@@ -40,6 +37,13 @@ nav = [
     {"云" = [
         { "SSH" = "云/SSH.md" },
         { "Azure" = "云/Azure.md" }
+    ]},
+    {"BME" = [
+        { "生物医学信号处理" = "BME/生物医学信号处理.md" }
+    ]},
+    {"EE" = [
+        { "无线电" = "EE/无线电.md" },
+        { "数字音频" = "EE/数字音频.md" }
     ]}
 ]
 
