feat: 更新导航，添加网络认证文档

--- a/zensical.toml
+++ b/zensical.toml
@@ -32,7 +32,11 @@ nav = [
         { "VPN" = "网络/VPN.md" }
     ]},
     {"安全" = [
-        { "设备识别与认证" = "安全/设备识别与认证.md" }
+        { "设备识别与认证" = "安全/设备识别与认证.md" },
+        { "网络认证" = "安全/网络认证.md" }
+    ]},
+    {"AI" = [
+        { "MCP" = "AI/MCP.md" }
     ]},
     {"云" = [
         { "SSH" = "云/SSH.md" },
