feat: 更新文献阅读文档，简化预训练和微调阶段描述；在导航中添加P2P部分

--- a/zensical.toml
+++ b/zensical.toml
@@ -29,7 +29,8 @@ nav = [
         { "网络基础" = "网络/网络基础.md" },
         { "网络连接" = "网络/网络连接.md" },
         { "代理" = "网络/代理.md" },
-        { "VPN" = "网络/VPN.md" }
+        { "VPN" = "网络/VPN.md" },
+        { "P2P" = "网络/P2P.md" }
     ]},
     {"安全" = [
         { "设备识别与认证" = "安全/设备识别与认证.md" },
@@ -49,7 +50,10 @@ nav = [
     {"EE" = [
         { "无线电" = "EE/无线电.md" },
         { "数字音频" = "EE/数字音频.md" }
-    ]}
+    ]},
+    {"CADD" = [
+        { "文献阅读" = "CADD/文献阅读.md" }
+    }
 ]
 
 [project.theme]
