--- a/zensical.toml
+++ b/zensical.toml
@@ -34,7 +34,8 @@ nav = [
     ]},
     {"安全" = [
         { "设备识别与认证" = "安全/设备识别与认证.md" },
-        { "网络认证" = "安全/网络认证.md" }
+        { "网络认证" = "安全/网络认证.md" },
+        { "网络安全" = "安全/网络安全.md" }
     ]},
     {"AI" = [
         { "工具" = "AI/工具.md" },
