--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,6 +22,7 @@ jobs:
           python-version: 3.x
       - run: pip install zensical
       - run: zensical build --clean
+      - run: cp -r docs/Files site/Files
       - uses: actions/upload-pages-artifact@v4
         with:
           path: site
