--- a/zensical.toml
+++ b/zensical.toml
@@ -2,9 +2,9 @@
 site_name = "Blank's CS Learning"
 site_description = "空白棱的CS学习笔记"
 site_author = "空白棱"
-site_url = "https://cyhkbl.github.io/CS-learning/"
+site_url = "https://cyhkbl.github.io/CS-Learning/"
 copyright = "&copy; 空白棱"
-repo_url = "https://github.com/cyhkbl/CS-learning"
+repo_url = "https://github.com/cyhkbl/CS-Learning"
 nav = [
     {"环境" = [
         { "环境配置" = "环境/环境配置.md" },
