fix: 添加近场通讯文档，介绍NFC技术及其工作模式

--- a/zensical.toml
+++ b/zensical.toml
@@ -50,7 +50,8 @@ nav = [
     ]},
     {"EE" = [
         { "无线电" = "EE/无线电.md" },
-        { "数字音频" = "EE/数字音频.md" }
+        { "数字音频" = "EE/数字音频.md" },
+        { "近场通讯" = "EE/近场通讯.md" }
     ]},
     {"CADD" = [
         { "文献阅读" = "CADD/文献阅读.md" }
