feat: 在AI导航中添加CLI工具和反代与API统一管理文档链接

--- a/zensical.toml
+++ b/zensical.toml
@@ -39,7 +39,9 @@ nav = [
     ]},
     {"AI" = [
         { "工具" = "AI/工具.md" },
-        { "MCP" = "AI/MCP.md" }
+        { "MCP" = "AI/MCP.md" },
+        { "CLI工具" = "AI/CLI工具.md" },
+        { "反代与API统一管理" = "AI/反代与API统一管理.md" }
     ]},
     {"云" = [
         { "SSH" = "云/SSH.md" },
