feat: 更新文档，添加AI IDE和VSCode扩展相关内容，优化CLI工具描述

--- a/zensical.toml
+++ b/zensical.toml
@@ -38,10 +38,12 @@ nav = [
         { "网络安全" = "安全/网络安全.md" }
     ]},
     {"AI" = [
-        { "工具" = "AI/工具.md" },
         { "MCP" = "AI/MCP.md" },
         { "CLI工具" = "AI/CLI工具.md" },
-        { "反代与API统一管理" = "AI/反代与API统一管理.md" }
+        { "反代与API统一管理" = "AI/反代与API统一管理.md" },
+        { "VSCode扩展" = "AI/VSCode扩展.md" },
+        { "AI IDE" = "AI/AI IDE.md" },
+        { "提示词工程" = "AI/提示词工程.md" }
     ]},
     {"云" = [
         { "SSH" = "云/SSH.md" },
